# ai-starter-kit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  plan.checklist.md  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-debugger.md  data-curator.md  eval-architect.md  lecture-writer.md  nano-implementer.md  paper-to-code.md  reward-auditor.md  scaling-advisor.md  tokenizer-inspector.md  vibe-check-reviewer.md
.claude/skills/agent-loop-trace/: SKILL.md
.claude/skills/context-budget/: SKILL.md
.claude/skills/data-is-code/: SKILL.md
.claude/skills/eval-first/: SKILL.md
.claude/skills/eval-set-builder/: SKILL.md
.claude/skills/first-principles/: SKILL.md
.github/workflows/: tests.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: README-en.md
docs/marketplace/: PLUGIN-DISTRIBUTION.md  PUBLISHING.md
examples/depurador-claude/: AGENTS.md  CLAUDE.md  sample_bug.py
examples/explorador-gemini/: AGENTS.md  CLAUDE.md
examples/gerador-codex/: AGENTS.md  codex-agent.ts  projects.json  simple_agent.py
examples/multi-model-opencode/: AGENTS.md  CLAUDE.md
examples/multi-modelo-openclaude/: AGENTS.md  CLAUDE.md
opendesign/: manifest.json
scripts/: hook-before-edit.sh  init-ai.mjs  setup.py  setup.sh  test_models.sh
templates/: AGENTS.md  CLAUDE.md
templates/.claude/: SKILLS.md  settings.json
templates/.codex/: settings.json
tests/: init-ai.test.mjs
(+40 files in other folders)
