[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-agents-starter-kit"
version = "1.0.0"
description = "AI Agents Starter Kit – Python examples and utilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "flake8>=7.0",
  "black>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["examples"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".env"]
